--- a/QLTT/QLTT/QLTT.csproj
+++ b/QLTT/QLTT/QLTT.csproj
@@ -627,6 +627,8 @@
     <Content Include="Areas\Admin\Views\HoaDon\Index.cshtml" />
     <Content Include="Areas\Admin\Views\Index\Search.cshtml" />
     <Content Include="Areas\Admin\Views\Index\Index.cshtml" />
+    <Content Include="Areas\Admin\Views\HoaDon\ChangeInfrastructure.cshtml" />
+    <Content Include="Areas\Admin\Views\HoaDon\ResultChangeInfrastructure.cshtml" />
     <EntityDeploy Include="Models\Model1.edmx">
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Model1.Designer.cs</LastGenOutput>
