--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,4 @@ QLTT/.vs/QLTT/config/applicationhost.config
 QLTT/QLTT/bin/QLTT.dll.config
 /QLTT/QLTT/bin
 QLTT/QLTT/Models/Model1.Designer.cs
+QLTT/.vs/QLTT/v17/.suo
